[gd_scene load_steps=34 format=2]

[ext_resource path="res://scripts/enemy_1.gd" type="Script" id=1]
[ext_resource path="res://wad/gfx/MCD1-1.png.png" type="Texture" id=2]
[ext_resource path="res://wad/gfx/MCD1-2.png.png" type="Texture" id=3]
[ext_resource path="res://wad/gfx/MCD1-3.png.png" type="Texture" id=4]
[ext_resource path="res://wad/gfx/MCD1-4.png.png" type="Texture" id=5]
[ext_resource path="res://wad/gfx/MCD1-5.png.png" type="Texture" id=6]
[ext_resource path="res://wad/gfx/MCD1-6.png.png" type="Texture" id=7]
[ext_resource path="res://wad/gfx/MCD1-7.png.png" type="Texture" id=8]
[ext_resource path="res://wad/gfx/Monstro Coral Frente-1.png.png" type="Texture" id=9]
[ext_resource path="res://wad/gfx/Monstro Coral Frente-2.png.png" type="Texture" id=10]
[ext_resource path="res://wad/gfx/Monstro Coral Frente-3.png.png" type="Texture" id=11]
[ext_resource path="res://wad/gfx/Monstro Coral Frente-4.png.png" type="Texture" id=12]
[ext_resource path="res://wad/gfx/Monstro Coral Frente-5.png.png" type="Texture" id=13]
[ext_resource path="res://wad/gfx/Monstro Coral Frente-6.png.png" type="Texture" id=14]
[ext_resource path="res://wad/gfx/Monstro Coral Frente-7.png.png" type="Texture" id=15]
[ext_resource path="res://wad/gfx/Monstro Coral esquerda-1.png.png" type="Texture" id=16]
[ext_resource path="res://wad/gfx/Monstro Coral esquerda-2.png.png" type="Texture" id=17]
[ext_resource path="res://wad/gfx/Monstro Coral esquerda-3.png.png" type="Texture" id=18]
[ext_resource path="res://wad/gfx/Monstro Coral esquerda-4.png.png" type="Texture" id=19]
[ext_resource path="res://wad/gfx/Monstro Coral esquerda-5.png.png" type="Texture" id=20]
[ext_resource path="res://wad/gfx/Monstro Coral esquerda-6.png.png" type="Texture" id=21]
[ext_resource path="res://wad/gfx/Monstro Coral esquerda-7.png.png" type="Texture" id=22]
[ext_resource path="res://wad/gfx/Monstro Coral Costas-1.png.png" type="Texture" id=23]
[ext_resource path="res://wad/gfx/Monstro Coral Costas-2.png.png" type="Texture" id=24]
[ext_resource path="res://wad/gfx/Monstro Coral Costas-3.png.png" type="Texture" id=25]
[ext_resource path="res://wad/gfx/Monstro Coral Costas-4.png.png" type="Texture" id=26]
[ext_resource path="res://wad/gfx/Monstro Coral Costas-5.png.png" type="Texture" id=27]
[ext_resource path="res://wad/gfx/Monstro Coral Costas-6.png.png" type="Texture" id=28]
[ext_resource path="res://wad/gfx/Monstro Coral Costas-7.png.png" type="Texture" id=29]
[ext_resource path="res://wad/sfx/monster_generic_bullet_hit.wav" type="AudioStream" id=30]

[sub_resource type="SpriteFrames" id=1]

animations = [ {
"frames": [ ExtResource( 2 ), ExtResource( 3 ), ExtResource( 4 ), ExtResource( 5 ), ExtResource( 6 ), ExtResource( 7 ), ExtResource( 8 ) ],
"loop": true,
"name": "walking_right",
"speed": 5.0
}, {
"frames": [ ExtResource( 9 ), ExtResource( 10 ), ExtResource( 11 ), ExtResource( 12 ), ExtResource( 13 ), ExtResource( 14 ), ExtResource( 15 ) ],
"loop": true,
"name": "walking_front",
"speed": 5.0
}, {
"frames": [ ExtResource( 16 ), ExtResource( 17 ), ExtResource( 18 ), ExtResource( 19 ), ExtResource( 20 ), ExtResource( 21 ), ExtResource( 22 ) ],
"loop": true,
"name": "walking_left",
"speed": 5.0
}, {
"frames": [ ExtResource( 23 ), ExtResource( 24 ), ExtResource( 25 ), ExtResource( 26 ), ExtResource( 27 ), ExtResource( 28 ), ExtResource( 29 ) ],
"loop": true,
"name": "walking_back",
"speed": 5.0
} ]
_sections_unfolded = [ "Resource" ]

[sub_resource type="CircleShape2D" id=2]

custom_solver_bias = 0.0
radius = 277.125

[sub_resource type="RectangleShape2D" id=3]

custom_solver_bias = 0.0
extents = Vector2( 57.1429, 70 )

[node name="enemy_1" type="KinematicBody2D"]

scale = Vector2( 1, 0.7 )
input_pickable = false
collision_layer = 520
collision_mask = 110
collision/safe_margin = 0.08
script = ExtResource( 1 )
_sections_unfolded = [ "Collision", "Material", "Transform", "Visibility", "collision" ]

[node name="screen_notifier_1" type="VisibilityNotifier2D" parent="." index="0"]

rect = Rect2( -10, -10, 20, 20 )

[node name="enemy_1_raycast_right" type="RayCast2D" parent="." index="1"]

enabled = true
exclude_parent = true
cast_to = Vector2( 0, -150 )
collision_mask = 2

[node name="enemy_1_raycast_up" type="RayCast2D" parent="." index="2"]

enabled = true
exclude_parent = true
cast_to = Vector2( -200, 0 )
collision_mask = 2

[node name="enemy_1_raycast_down" type="RayCast2D" parent="." index="3"]

enabled = true
exclude_parent = true
cast_to = Vector2( 200, 0 )
collision_mask = 2

[node name="enemy_1_raycast_left" type="RayCast2D" parent="." index="4"]

enabled = true
exclude_parent = true
cast_to = Vector2( 0, 150 )
collision_mask = 2

[node name="enemy_1_sprite" type="AnimatedSprite" parent="." index="5"]

scale = Vector2( 2, 2 )
frames = SubResource( 1 )
animation = "walking_front"
frame = 1
playing = true
_sections_unfolded = [ "Animation", "Offset", "Region", "Transform", "Visibility" ]

[node name="enemy_1_collision" type="CollisionPolygon2D" parent="." index="6"]

visible = false
position = Vector2( 0.493761, -20.2372 )
rotation = 4.71239
build_mode = 0
polygon = PoolVector2Array( 18.3586, -29.3264, 5.45302, -36.1376, -79.8671, -37.9301, -82.7351, 35.2015, -19.2827, 35.56, 18.7171, 28.7487, 43.0943, 7.59792, 42.7358, -12.4774 )
_sections_unfolded = [ "Transform" ]

[node name="fov_enemy_1" type="Area2D" parent="." index="7"]

input_pickable = true
gravity_vec = Vector2( 0, 1 )
gravity = 98.0
linear_damp = 0.1
angular_damp = 1.0
collision_mask = 4
audio_bus_override = false
audio_bus_name = "Master"
_sections_unfolded = [ "Collision" ]

[node name="fov_collision_enemy_1" type="CollisionShape2D" parent="fov_enemy_1" index="0"]

visible = false
scale = Vector2( 1.5, 1 )
shape = SubResource( 2 )
_sections_unfolded = [ "Transform" ]

[node name="enemy_1_hit" type="Area2D" parent="." index="8"]

input_pickable = true
gravity_vec = Vector2( 0, 1 )
gravity = 98.0
linear_damp = 0.1
angular_damp = 1.0
collision_layer = 9
collision_mask = 5
audio_bus_override = false
audio_bus_name = "Master"
_sections_unfolded = [ "Collision" ]

[node name="enemy_1_collision" type="CollisionShape2D" parent="enemy_1_hit" index="0"]

visible = false
modulate = Color( 1, 0.890625, 0, 1 )
shape = SubResource( 3 )
_sections_unfolded = [ "Visibility" ]

[node name="monster_hit" type="AudioStreamPlayer2D" parent="." index="9"]

stream = ExtResource( 30 )
volume_db = 0.0
pitch_scale = 1.0
autoplay = false
max_distance = 2000.0
attenuation = 1.0
bus = "Master"
area_mask = 1

[connection signal="screen_entered" from="screen_notifier_1" to="." method="_on_screen_notifier_1_screen_entered"]

[connection signal="body_entered" from="fov_enemy_1" to="." method="_on_fov_enemy_1_body_entered"]

[connection signal="body_exited" from="fov_enemy_1" to="." method="_on_fov_enemy_1_body_exited"]

[connection signal="area_entered" from="enemy_1_hit" to="." method="_on_enemy_1_hit_area_entered"]


